# Box3dTest

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  compile_commands.json
.github/workflows/: deploy-docs.yml  main.yml  static.yml
Doxygen/: Doxyfile
Doxygen/html/: annotated.html  annotated_dup.js  class_debugger.html  class_debugger.js  class_engine-members.html  class_player-members.html  class_world-members.html  class_world.html  class_world.js  cube_brush_8hpp_source.html  debugger_8cpp.html  debugger_8cpp_source.html  dir_3624c3011e0f2f30fa93f2c3df0f9e35.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6826d79532171ff2338799cfd298b875.html  dir_6826d79532171ff2338799cfd298b875.js  dir_975424cdae97a07db69e55371758444e.html  dir_975424cdae97a07db69e55371758444e.js  engine_8cpp.html  engine_8cpp.js  engine_8cpp_source.html  engine_8hpp.js  files.html  functions_b.html  functions_c.html  functions_d.html  functions_g.html  functions_h.html  functions_k.html  functions_l.html  functions_m.html  functions_p.html  functions_r.html  functions_v.html  functions_vars_e.html  functions_vars_g.html  functions_vars_h.html  functions_vars_i.html  functions_vars_m.html  (+122 more)
Doxygen/html/search/: all_0.js  all_10.js  all_11.js  all_17.js  all_3.js  all_5.js  all_6.js  all_8.js  all_a.js  (+43 more)
Doxygen/latex/: annotated.tex  class_player.tex  cube_brush_8hpp.tex  debugger_8cpp.tex  debugger_8cpp_source.tex  debugger_8hpp.tex  dir_6826d79532171ff2338799cfd298b875.tex  dirs.tex  engine_8cpp.tex  engine_8cpp_source.tex  files.tex  graphics_8hpp.tex  main_8cpp_source.tex  namespace_collision_category.tex  namespace_companion_cube_stats.tex  player_8cpp.tex  player_8cpp_source.tex  player_8hpp.tex  player_8hpp_source.tex  raylib_8h_source.tex  raymath_8h_source.tex  rlgl_8h.tex  rlgl_8h_source.tex  rlights_8h_source.tex  struct_audio_stream.tex  struct_bone_info.tex  struct_box_def.tex  struct_camera2_d.tex  struct_color.tex  struct_font.tex  struct_image.tex  struct_light.tex  struct_material_map.tex  struct_matrix.tex  struct_model.tex  struct_model_skeleton.tex  struct_music.tex  struct_ray_fire_result.tex  struct_render_texture.tex  struct_texture.tex  (+13 more)
docs/html/: class_debugger-members.html  class_engine.html  class_engine.js  class_player.html  class_player.js  classes.html  cube_brush_8hpp.html  cube_brush_8hpp.js  debugger_8hpp.html  debugger_8hpp.js  debugger_8hpp_source.html  dir_3072bc1f55ed1280fe4fbe6b21c78379.html  dir_3072bc1f55ed1280fe4fbe6b21c78379.js  dir_3624c3011e0f2f30fa93f2c3df0f9e35.js  dir_8250e12e5a19acb8ece30f1703b6dc16.html  dir_8250e12e5a19acb8ece30f1703b6dc16.js  doxygen_crawl.html  engine_8hpp.html  engine_8hpp_source.html  functions.html  functions_e.html  functions_f.html  functions_func.html  functions_i.html  functions_n.html  functions_o.html  functions_s.html  functions_t.html  functions_u.html  functions_vars.html  functions_vars_b.html  functions_vars_c.html  functions_vars_d.html  functions_vars_f.html  functions_vars_k.html  functions_vars_l.html  functions_vars_o.html  functions_vars_r.html  functions_vars_t.html  functions_vars_x.html  (+105 more)
docs/latex/: class_debugger.tex  class_engine.tex  class_world.tex  cube_brush_8hpp_source.tex  debugger_8hpp_source.tex  dir_3072bc1f55ed1280fe4fbe6b21c78379.tex  dir_3624c3011e0f2f30fa93f2c3df0f9e35.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dir_8250e12e5a19acb8ece30f1703b6dc16.tex  dir_975424cdae97a07db69e55371758444e.tex  engine_8hpp.tex  engine_8hpp_source.tex  global_8hpp.tex  global_8hpp_source.tex  graphics_8hpp_source.tex  main_8cpp.tex  movement_8hpp.tex  movement_8hpp_source.tex  namespaces.tex  physics_8hpp.tex  physics_8hpp_source.tex  raylib_8h.tex  raymath_8h.tex  refman.tex  rlights_8h.tex  struct_automation_event.tex  struct_automation_event_list.tex  struct_bounding_box.tex  struct_camera3_d.tex  struct_file_path_list.tex  struct_glyph_info.tex  struct_material.tex  struct_mesh.tex  struct_model_animation.tex  struct_n_patch_info.tex  struct_ray.tex  struct_ray_collision.tex  struct_rectangle.tex  struct_shader.tex  struct_sound.tex  (+6 more)
resources/models/: button.gltf  companion_cube.glb  portalgun.gltf
resources/scenes/: level_01.json  level_01.mtl
src/: CMakeLists.txt  graphics.hpp  main.cpp  physics.hpp  utils.hpp
src/Debug/: debugger.cpp  debugger.hpp
src/Editor/: editor.cpp  editor.hpp  main.cpp
src/Engine/: assetManager.hpp  engine.cpp  engine.hpp  global.hpp  shaderManager.hpp
src/Game/: main.cpp
src/physics/: physics.hpp  physicsButton.hpp
src/player/: movement.hpp  player.cpp  player.hpp
src/world/: cubeBrush.hpp  world.cpp  world.hpp
tools/: README.md  level_01.map  map_to_json_converter.cpp
(+52 files in other folders)
